--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,15 @@
 @layer components {
 
     .button {
-        @apply flex w-full h-12	justify-center rounded-3xl items-center bg-gradient-to-r from-gradient-pink to-light-orange-labeddit hover:from-pink-500 hover:to-yellow-500 shadow-sm text-lg font-bold text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-dark-orange-labeddit
+        @apply font-['Noto_Sans'] flex w-full h-12 justify-center rounded-3xl items-center bg-gradient-to-r from-gradient-pink to-light-orange-labeddit hover:from-pink-500 hover:to-yellow-500 shadow-sm text-lg font-bold text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-dark-orange-labeddit
     }
 
     .button-outline {
-        @apply flex w-full h-12	justify-center rounded-3xl items-center border-[1.5px] border-dark-orange-labeddit bg-white shadow-sm hover:bg-gradient-to-r hover:from-gradient-pink hover:to-light-orange-labeddit text-lg font-bold text-dark-orange-labeddit hover:text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-light-orange-labeddit
+        @apply font-['Noto_Sans'] flex w-full h-12	justify-center rounded-3xl items-center border-[1.5px] border-dark-orange-labeddit bg-white shadow-sm hover:bg-gradient-to-r hover:from-gradient-pink hover:to-light-orange-labeddit text-lg font-bold text-dark-orange-labeddit hover:text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-light-orange-labeddit
+    }
+
+    .button-header {
+        @apply font-['Noto_Sans'] text-lg font-semibold text-blue-button
     }
 
     .hr {
